# hull/models.py
@@ -1,6 +1,11 @@
 from django.db import models
 from datetime import date
 
+DEFAULT_CATEGORY_ID = 1
+
+class Category(models.Model):
+    name = models.CharField(max_length=100)
+
 class Subscription(models.Model):
     class RecurrenceType(models.TextChoices):
         WEEKLY = 'weekly'
@@ -14,3 +19,8 @@ class Subscription(models.Model):
     recurrence = models.CharField(max_length=20, choices=RecurrenceType.choices)
     trial_cost = models.PositiveIntegerField(null=True)
     cost = models.PositiveIntegerField(default=0)
+    category = models.OneToOneField(
+        Category,
+        on_delete=models.DO_NOTHING,
+        default=DEFAULT_CATEGORY_ID
+    )
