# hull/serializers.py
@@ -1,8 +1,13 @@
 from rest_framework import serializers
 
-from .models import Subscription
+from .models import Subscription, Category
 
 class SubscriptionSerializer(serializers.HyperlinkedModelSerializer):
     class Meta:
         model = Subscription
-        fields = ('id', 'title', 'starts_at', 'trial_ends_at', 'ends_at', 'recurrence', 'trial_cost', 'cost')
+        fields = ('id', 'title', 'category', 'starts_at', 'trial_ends_at', 'ends_at', 'recurrence', 'trial_cost', 'cost')
+
+class CategorySerializer(serializers.HyperlinkedModelSerializer):
+    class Meta:
+        model = Category
+        fields = ('id', 'name')
